--- a/website/html/help.html
+++ b/website/html/help.html
@@ -40,7 +40,8 @@ Decription: HTML for the help page.
                     This project was created for CS 425 and CS 426 at the University of Nevada, Reno in Fall 2021 and Spring 2022.<br>
                     Feel free to contact any of us on LinkedIn for more infomation. <br>
                     This version of NetDiscover lacks certain functionality and the GitHub repository should be ran locally for all functions.<br>
-                    <p><a href="https://github.com/Chad-Saltzman/Network_Topology_Mapper">NetDiscover GitHub</a></p>
+                    <p><a href="https://github.com/duronald/NetDiscover">NetDiscover Production GitHub</a></p>
+                    <p><a href="https://github.com/Chad-Saltzman/Network_Topology_Mapper">NetDiscover Local GitHub</a></p>
 		    <p><a href="https://ronalddu.wixsite.com/netdiscover">NetDiscover Website</a></p>
                 </p><br>
 
